[gd_scene load_steps=4 format=3 uid="uid://bf1le2pfp52xi"]

[ext_resource type="Script" path="res://prefabs/gun.gd" id="1_pur1f"]
[ext_resource type="Texture2D" uid="uid://cugvxse1jlwqg" path="res://art/weapons/weaponR1.png" id="2_jl2ee"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qy1bd"]
radius = 623.258

[node name="Gun" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_pur1f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qy1bd")

[node name="weapon_pivot" type="Marker2D" parent="."]

[node name="Pistol" type="Sprite2D" parent="weapon_pivot"]
position = Vector2(21, -82)
rotation = -0.00764787
scale = Vector2(0.13091, 0.13091)
texture = ExtResource("2_jl2ee")

[node name="shooting_point" type="Marker2D" parent="weapon_pivot/Pistol"]
position = Vector2(663.556, 400.882)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.345
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
